# olapi

./: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  README_DEV.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/olapi/: README.md  auth.py  database.py  main.py  pyproject.toml
apps/olapi/dtos/: auth.py  user.py
apps/olapi/models/: user.py
apps/olapi/routers/: auth.py  temporary.py
apps/olapi/scripts/: request_api.py
apps/olapi/tests/: conftest.py  test_temporary.py
docker/: Dockerfile
docker/keycloak/: realm.json
docs/: SocialMedia.md
keycloak/: ABOUT.md  realm.json
libs/authentication/: README.md  pyproject.toml
libs/authentication/src/authentication/: keycloak.py
libs/authentication/tests/: test_keycloak.py
scripts/: TODO.md  request_api.py  run_keycloak_client.py  test_authentication.py
src/auth/: keycloak.py
src/authentication/: exceptions.py  keycloak.py
src/olapi/: auth.py  database.py  db.py  dependencies.py  deps.py  main.py  settings.py
src/olapi/auth/: jwt.py  keycloak.py
src/olapi/dtos/: auth.py  user.py
src/olapi/models/: user.py
src/olapi/routers/: auth.py  temporary.py
src/olapi/schemas/: auth.py  user.py
tests/: conftest.py  test_temporary.py
