[project]
name = "olapi"
version = "0.0.1"
description = "Social Media API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "pydantic[email]>=2.6",
    "python-jose[cryptography]>=3.3",
    "httpx>=0.27",
    "python-ulid>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/olapi"]
