[project]
name = "olapi"
version = "0.0.1"
description = "Social Media API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "pydantic[email]>=2.6",
    "python-jose[cryptography]>=3.3",
    "python-ulid>=2.2",
    "httpx2>=2.3",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pyright>=1.1.350",
    "types-python-jose>=3.3",
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/olapi", "src/authentication"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    # https://docs.astral.sh/ruff/rules/
    "ARG", # unused arguments
    "E",   # pycodestyle
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
    "Q",   # quotes
]
ignore = ["B008"] # function-call-in-default-argument (for fastapi Depends)

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
include = ["src", "tests"]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests"]
