[project]
name = "olapi"
version = "0.0.1"
description = "Social Media API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "pydantic[email]>=2.6",
    "python-ulid>=2.2",
    "httpx2>=2.3",
    "authentication",
]

[tool.uv.sources]
authentication = { workspace = true }

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
extend = "../../pyproject.toml"
