[project]
name = "authentication"
version = "0.0.1"
description = "Keycloak authentication client"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx2>=2.3",
    "python-jose[cryptography]>=3.3",
    "starlette>=0.37",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
extend = "../../pyproject.toml"
